# cs736-zephyr

./: .gitignore  ADDING_STATISTICS_SUMMARY.md  ALGORITHM_COMPARISON.md  CUSTOM_CHANGES.md  DOCUMENTATION_INDEX.md  MODULAR_DESIGN.md  NEW_ALGORITHMS.md  QUICK_REFERENCE.md  QUICK_START.md  REVERSION_COMPLETE.md  RT_SCHEDULER_README.md  RT_STATISTICS_GUIDE.md  RT_STATISTICS_IMPLEMENTATION.md  RT_STATISTICS_QUICK_REF.md  SCHEDULER_USER_GUIDE.md  scheduler_comparison_results.txt  scheduler_evaluation_results_20251208_171056.txt
app/hello_world_custom/: CMakeLists.txt  prj.conf
app/jack_test/: CMakeLists.txt  PARSER_README.md  README.rst  example_analysis.py  monitor.py  (+6 more)
app/workloads/periodic/light_load/: CMakeLists.txt  README.md  prj.conf  prj.conf.backup
app/workloads/periodic/light_load/src/: main.c
docs_cs736_project/: ITERATIVE_DEVELOPMENT.md  SCHEDULING_ALGORITHMS.md
kernel/: CMakeLists.txt  Kconfig  Kconfig.cs736_backup  sched.c  sched.c.cs736_backup  sched_rt.c  thread.c  usage.c
scheduler_comparison_results_20251201_191901/: results_simple.txt
scheduler_comparison_results_20251201_205009/: COMPARISON_REPORT.md
scheduler_comparison_results_20251201_212001/: results_simple.txt
scripts/: revert_cs736_changes.sh  test_all_schedulers.sh
test_evaluation_20251201_211233/: workload1_periodic_control_MULTIQ_memory.txt  workload1_periodic_control_SIMPLE_memory.txt  workload1_periodic_control_SIMPLE_summary.txt  workload5_scheduler_benchmark_MULTIQ_memory.txt  workload5_scheduler_benchmark_SIMPLE_memory.txt  workload5_scheduler_benchmark_SIMPLE_summary.txt
(+195 files in other folders)
